--- a/프로세스관리/프로세스와스레드.md
+++ b/프로세스관리/프로세스와스레드.md
@@ -10,6 +10,7 @@
 * 프로세스는 실행의 흐름에 따라 상태(스테이트)가 변한다.
 * 상태를 정의하는 이름은 운영체제에 따라 다르지만, 대부분 서로 비슷한 개념으로 구성되어 있다.
 * 프로세스의 흐름은 일반적으로 다음과 같은 5개의 상태로 정의된다.
+![Alt text](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FX3xNu%2Fbtrec3xnZhm%2F3B6NJSOKC6PCodWbdD42tk%2Fimg.png)
 
 ![Alt text](https://velog.velcdn.com/images/curiosity806/post/a3957723-584b-4d34-bc82-c39db63ec07e/image.png)
 * New
@@ -104,3 +105,4 @@
 * [출처 2: 운영체제, 프로세스 상태](https://rebas.kr/852) &nbsp; 
 * [출처 3: 프로세스란? (스케줄링, 메모리구조, 상태변화)](https://blockdmask.tistory.com/22)
 * [출처 4: 문맥 교환 (Context switch) 알아보기](https://yoongrammer.tistory.com/53)
+* [출처 5: [운영체제(OS)] 3. 프로세스(Process)](https://rebro.kr/172)
