--- a/프로세스관리/프로세스와스레드.md
+++ b/프로세스관리/프로세스와스레드.md
@@ -3,7 +3,7 @@
 
 ## <br> 1. 프로세스의 상태표
 ### 1.1 프로세스?
-> 실행 중에 있는 프로그램을 의미.
+> 실행 중에 있는 프로그램을 의미. 실행을 위해 메모리에 올라온 동적인 상태.
 > <br> 프로세스 내부에는 최소 하나의 스레드를 가지고 있음. 실제로는 스레드 단위로 스케줄링함.
 
 ### 1.2 프로세스 상태
@@ -27,7 +27,9 @@
   - 프로세스가 종료된 상태
 
 ## <br> 2. PCB(Process Control Block) 블록
-> 특정한 프로세스를 관리할 필요가 있는 정보를 포함하는, 운영체제 커널의 자료구조.
+> 프로세스를 실행하는 데 필요한 중요한 정보를 보관하는 <b>자료 구조</b>.
+> <br> 프로세스는 고유의 프로세스 제어 블록을 가짐.
+> <br> 프로세스 생성 시 만들어져서 프로세스가 실행을 완료하면 폐기.
 > <br> 프로세스마다 현재 상태를 하나의 데이터 구조에 저장하여 관리하는데, 이를 PCB라고 부름.
 > <br> PCB는 커널의 데이터 영역 내에 존재한다.
 
