--- a/프로세스관리/교착상태.md
+++ b/프로세스관리/교착상태.md
@@ -22,6 +22,8 @@
 
 * 공유 변수: 교착 상태는 공유 변수를 사용할 때 발생.
 
+<img width="533" alt="스크린샷 2023-05-20 오후 11 56 26" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/bf2b9c67-9c73-4358-a482-f019f6548964">
+
 ### 1.4 응용 프로그램
 * 데이터베이스 같은 응용 프로그램에서도 교착 상태 발생.
 * 데이터베이스는 데이터의 일관성을 유지하기 위해 잠금을 사용하는데, 이때 교착 상태가 발생할 수 있음.
