--- a/메모리관리/가상메모리의기초.md
+++ b/메모리관리/가상메모리의기초.md
@@ -1,11 +1,11 @@
 # 운영체제: 메모리 관리
 > ✅ 가상 메모리의 기초 <br>
 
-> [01. 가상 메모리의 개요](https://github.com/YangYubin12/OperatingSystem/tree/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC#-01-%EA%B0%80%EC%83%81-%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98-%EA%B0%9C%EC%9A%94) <br>
-> [02. 페이징 기법](https://github.com/YangYubin12/OperatingSystem/tree/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC#-02-%ED%8E%98%EC%9D%B4%EC%A7%95-%EA%B8%B0%EB%B2%95) <br>
-> [03. 세그먼테이션 기법](https://github.com/YangYubin12/OperatingSystem/tree/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC#-03-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%EA%B8%B0%EB%B2%95) <br>
-> [04. 세그먼테이션-페이징 혼용 기법](https://github.com/YangYubin12/OperatingSystem/tree/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC#-4-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%ED%8E%98%EC%9D%B4%EC%A7%95-%ED%98%BC%EC%9A%A9-%EA%B8%B0%EB%B2%95) <br>
-> [05. 캐시 매핑 기법](https://github.com/YangYubin12/OperatingSystem/tree/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC#-5-%EC%BA%90%EC%8B%9C-%EB%A7%A4%ED%95%91-%EA%B8%B0%EB%B2%95) <br>
+> [01. 가상 메모리의 개요](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-01-%EA%B0%80%EC%83%81-%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98-%EA%B0%9C%EC%9A%94) <br>
+> [02. 페이징 기법](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-02-%ED%8E%98%EC%9D%B4%EC%A7%95-%EA%B8%B0%EB%B2%95) <br>
+> [03. 세그먼테이션 기법](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-03-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%EA%B8%B0%EB%B2%95) <br>
+> [04. 세그먼테이션-페이징 혼용 기법](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-4-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%ED%8E%98%EC%9D%B4%EC%A7%95-%ED%98%BC%EC%9A%A9-%EA%B8%B0%EB%B2%95) <br>
+> [05. 캐시 매핑 기법](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-5-%EC%BA%90%EC%8B%9C-%EB%A7%A4%ED%95%91-%EA%B8%B0%EB%B2%95) <br>
 
 ## <br> 01. 가상 메모리의 개요
 ### 1.1 가상 메모리?
