--- a/메모리관리/가상메모리관리.md
+++ b/메모리관리/가상메모리관리.md
@@ -8,347 +8,344 @@
 
 ## <br> 01. 요구 페이징
 ### 1.1 요구 페이징의 개요
-### 프로세스의 일부만 메모리로 가져오는 이유
-- 메모리를 효율적으로 관리하기 위해(메모리가 꽉 차면 관리하기 어려우므로 가급적 적은 양의 프로세스만 유지)
-- 응답 속도를 향상하기 위해(용량이 큰 프로세스를 전부 메모리로 가져와 실행하 면 응답이 늦어질 수 있으므로 필요한 모듈만 올려 실행)
+#### 프로세스의 일부만 메모리로 가져오는 이유
+- 메모리를 효율적으로 관리하기 위해: 메모리가 꽉 차면 관리하기 어려우므로 가급적 적은 양의 프로세스만 유지
+- 응답 속도를 향상하기 위해: 용량이 큰 프로세스를 전부 메모리로 가져와 실행하 면 응답이 늦어질 수 있으므로 필요한 모듈만 올려 실행
 - 포토샵 예) 메모리에는 포토샵의 메인 프로그램만 올리고 필터는 사용자가 필요로 할 때마다 메모리로 가져오는 것이 효율적
 <br>
 
-### 요구 페이징
+#### 요구 페이징
 - 사용자가 요구할 때 해당 페이지를 메모리로 가져오는 것
 - 페이지를 미리 가져 오는 방식은 가져온 페이지를 쓰지 않을 경우 메모리를 낭비하게됨
 - 따라서 요구 페이징이 메모리의 절약, 메모리의 효율적 관리, 프로세스의 응답 속도 향상 등의 효과를 볼 수 있음
   ![image](https://github.com/YangYubin12/OperatingSystem/assets/102217712/91ef8ee0-e49e-4ce2-9600-cf6cbcb697ac)
  
-<br>
+<br><br>
 
 ### 1.2 페이지 테이블 엔트리의 구조
-* 크게 프로세스가 바라보는 메모리 영역과, 메모리 관리자가 바라보는 메모리 영역으로 나뉨
-* 가상 메모리에서 메모리 관리자는 물리 메모리의 부족한 부분을 스왑 영역으로 보충
-  
-  ![image](https://github.com/YangYubin12/OperatingSystem/assets/102217712/1b4624fa-6097-4b96-b77b-a8548fe9155a)
+#### 요구 페이징과 스왑 영역
+- 페이지가 스왑 영역에 있는 경우는 크게 두 가지
+  - 요구 페이징으로 인해 처음부터 물리 메모리에 올라가지 못한 경우
+  - 메모리가 꽉 차서 스왑 영역으로 옮겨온 경우
+
 <br>
 
-### 1.3 가상 메모리의 크기와 동적 주소 변환
-* 가상 메모리의 크기
-  - 가상 메모리에서 메모리 관리자가 사용할 수 있는 메모리의 전체 크기는 물리 메모리(실제 메모리)와 스왑 영역을 합한 크기
-* 동적 주소 변환
-  * 가상 주소를 실제 메모리의 물리 주소로 변환
-  * 동적 주소 변환을 거치면 프로세스가 아무 제약 없이 사용자의 데이터를 물리 메모리에 배치 가능
+#### 페이지 테이블 엔트리(PTE)의 구성
+<img width="763" alt="스크린샷 2023-11-15 오후 7 32 05" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/6b1e8323-0879-45bf-919c-25216970948f">
+
+- 페이지 번호
+- 프레임 번호
+- 플래그 비트
+  - 접근 비트: 페이지가 메모리에 올라온 후 사용한 적이 있는지 알려주는 비트
+  - 변경 비트: 페이지가 메모리에 올라온 후 데이터의 변경이 있었는지 알려주는 비트
+  - 유효 비트: 페이지가 실제 메모리에 있는지를 나타내는 비트
+  - 읽기,쓰기,실행비트: 페이지에 대한 읽기 권한, 쓰기 권한, 실행 권한을 나타내는 비트
+
 <br>
 
-### 1.4 가상 메모리의 메모리 분할 방식
-* 가변 분할 방식을 이용한 세그먼테이션과 고정 분할 방식을 이용한 페이징 기법이 있음
-* 기본적으로 페이징 기법을 사용하나 페이지 테이블 관리가 어려움
-* 세그먼테이션 기법은 외부 단편화 등의 문제가 있음
-* 가상 메모리 시스템에서는 두 기법의 단점을 보완한 세그먼테이션-페이징 혼용 기법을 주로 사용
-  
-  <img width="706" alt="스크린샷 2023-11-01 오전 8 43 19" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/560de112-6f9c-4cc5-82b2-37e94506dbd2">
-<br>
-
-### 1.5 메모리 매핑 테이블
-가상 메모리 시스템에서 메모리 관리자는 가상 주소와 물리 주소를 일대일 매핑 테이블로 관리
-  <img width="820" alt="스크린샷 2023-11-01 오전 8 44 48" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/4cb37791-bcfe-4606-9bff-7b285e7fdd96">
-  
-## <br> 02. 페이징 기법
-### 2.1 페이징 기법의 구현
-* 페이징 기법?
-  * 고정 분할 방식을 이용한 가상 메모리 관리 기법
-  * 물리 주소 공간을 같은 크기로 나누어 사용
-  * 가상 주소는 프로세스 입장에서 바라본 메모리 공간으로 항상 0번지부터 시작
-<br>
-
-* 페이지와 프레임
-  * 가상주소의분할된각영역을페이지라고하며번호를매겨관리
-  * 물리 메모리의 각 영역은 가상 주소의 페이지와 구분하기 위해 프레임이라고 함(프레임도 페 이지처럼 번호를 매겨 관리)
-  * 페이지와 프레임의 크기는 같기 때문에 페이지는 어떤 프레임에도 배치될 수 있음
-  * 어떤 페이지가 어떤 프레임에 있는지에 대한 연결(매핑) 정보는 페이지 테이블에 담겨 있음
-  * 페이지 테이블에 invalid는 해당 페이지가 스왑 영역에 있다는 의미
-
-    <img width="567" alt="스크린샷 2023-11-01 오전 8 54 15" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/6f11f2dc-dc9f-44f9-b12b-8c0e35d58011">
-<br>
-
-### 2.2 페이징 기법의 주소 변환
-<b>프로세스가 30번지의 내용을 읽으려고 할 때 주소 변환 과정: </b>
-  1. 가상 주소 30번지가 어느 페이지에 있는지 찾음(30번지는 페이지 3의 0번째 위치에 있음: VA=<3, 0>)
-  2. 페이지 테이블의 페이지 3으로 가서 해당 페이지가 프레임 1에 있다는 것을 알아냄
-  3. 최종적으로 물리 메모리 프레임 1의 0번째 위치에 접근(이 주소가 가상 주소 30번지 의 물리 주소)
-    <img width="765" alt="스크린샷 2023-11-01 오전 8 57 02" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/526c2617-ca30-4f04-9733-f471efdfb0bc">
-<br>
-
-<b>프로세스가 가상주소 18번지에 값을 저장하려고 할 때 주소 변환 과정: </b>
-  1. 가상 주소 18번지가 어느 페이지에 있는지 찾음(18번지는 페이지 1의 8번째 위치에 있음: VA=<1 ,8>)
-  2. 페이지 테이블의 페이지 1로 가서 해당 페이지가 프레임 3에 있다는 것을 알아냄
-  3. 프로세스가 저장하려는 값을 프레임 3의 8번 위치에 저장
-    <img width="929" alt="스크린샷 2023-11-01 오전 8 57 54" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/fe61ddc4-f771-43f1-b954-f27bb4c2c805">
-<br>
-
-<b>정형화된 주소 변환:</b>
-  * 페이징 기법에서는 가상 주소를 VA=<P, D>로 표현
-    * VA : 가상 주소 virtual address
-    * P : 페이지 page
-    * D : 페이지의 처음 위치에서 해당 주소까지의 거리 distance
-
-  * 페이징 기법에서의 주소 변환은 가상 주소 VA=<P, D>를 물리 주소 PA=<F, D>로 변환하는 것
-    * PA: 물리메모리의 주소를 가리키는 용어로 물리 주소 또는 실제 주소
-    * F : 프레임 frame
-    * D : 프레임의 처음 위치에서 해당 주소까지의 거리 distance
-<br>
-
-<b>페이징 기법의 주소 변환 과정: </b>
-  * VA=<P, D> → PA=<F, D>
-  * 페이지 테이블을 사용하여 P는 F로 바꾸고 D는 변경 없이 그대로 씀
-  * D를 변경하지 않는 이유는 페이지와 프레임의 크기를 똑같이 나누었기 때문
-    <img width="794" alt="스크린샷 2023-11-01 오전 9 07 27" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/c6b49b9b-f6c1-472b-bcb9-18d8130432e0">
-<br>
-
-<b>페이지의 크기가 다양할 경우 가상 주소를 <P, D>로 변환하는 공식: </b>
-> P = 나눗셈 (가상 주소 / 한 페이지의 크기)의 몫<br>
-> D = 나눗셈 (가상 주소 / 한 페이지의 크기)의 나머지
-  * 한 페이지의 크기가 10B인 가상 메모리 시스템에서 가상 주소 32번지
-    * P=3(32/10의 몫)
-    * D=2(32/10의 나머지)
-  * 한 페이지의 크기가 512B인 시스템에서 가상 주소 2049번지
-    * P=4(2049/512의 몫)
-    * D=1(2049/512의 나머지)
-<br>
-
-<b>16bit CPU의 컴퓨터에서 한 페이지의 크기가 210B일 때 페이징 시스템: </b>
-  * 한 프로세스가 사용할 수 있는 가상 메모리의 크기는 2의 16승(65,536)B
-  * 사용자는 0번지부터 65535(216-1)번지까지 가상 주소 공간을 사용 가능
-  * 가상 주소로 사용할 수 있는 16bit 중 6bit는 페이지 번호로, 10bit는 페이지의 처음 위 치에서 해당 주소까지의 거리
-    <img width="771" alt="스크린샷 2023-11-01 오전 9 15 36" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/ac76f8c8-74de-473c-ba4a-2298cf63b6b3">
- 
-  * 전체 페이지의 수는 26, 즉 64개이고 페이지 0번부터 63번까지 존재
-  * 물리 주소도 가상 주소와 같이 1,024B로 나뉨. 프레임은 0부터 31까지만 있다고 가정
-  * 페이지 테이블은 페이지 테이블 엔트리가 0~63으로 총 64개(페이지 테이블의 크기는 물리 주소의 크기가 아니라 프로세스의 크기에 비례)
-    <img width="696" alt="스크린샷 2023-11-01 오전 9 20 28" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/d064d381-7d54-4828-87b5-21ebc13ce8b2">
-<br>
-
-<b>프로세스가 980번지에 저장된 데이터를 요청했을 때 동적 주소 변환: </b>
-  * 가상 주소 980번지의 페이지 P, 거리 D를 구함
-    * P=0(980/1024의 몫), D=980(980/1024의 나머지) → VA=<0, 980>
-  * 페이지 테이블로 가서 페이지 0이 프레임 2에 저장되어 있다는 것을 확인
-  * 물리 메모리의 프레임 2 시작 지점으로부터 980번지 떨어진 곳에 접근하여 데이터를 가져옴
-    <img width="681" alt="스크린샷 2023-11-01 오전 9 21 19" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/42301f56-81ec-480f-989e-7baaca120e7b">
-<br>
-
-### 2.3 페이지 테이블 관리
-<b>다수의 프로세스가 있는 페이징 시스템: </b>
-  * 프로세스마다 페이지 테이블이 존재
-  * 프로세스의 수가 많아지면 페이지 테이블의 크기가 커지고, 이에 따라 프로세스가 실제로 사용할 수 있는 메모리 영역이 줄어듬
-  * 페이지 테이블 크기를 적정하게 유지하는 것은 페이지 테이블 관리의 핵심
-    <img width="677" alt="스크린샷 2023-11-01 오전 9 25 40" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/0b0840af-ab3e-48e2-b971-a6d6770ddef9">
-<br>
-
-<b>물리 메모리 내 페이지 테이블의 구조: </b>
-  * 각 페이지 테이블의 시작 주소는 페이지 테이블 기준 레지스터Page Table Base Register, PTBR에 보관
-  *  물리 메모리의 크기가 작을 때는 프로세스만 스왑 영역으로 옮겨지는 것이 아니라 페 이지 테이블의 일부도 스왑 영역으로 옮겨짐
-    <img width="722" alt="스크린샷 2023-11-01 오전 9 28 22" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/ffba5abf-15c0-468d-9a50-7347274983bb">
-<br>
-
-### 2.4 페이지 테이블 매핑 방식
-<img width="700" alt="스크린샷 2023-11-01 오전 9 29 24" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/7e6835e1-d3b6-460e-8176-4608594c9ff6">
-
-* 직접 매핑 direct mapping
-  * 페이지 테이블 전체가 물리 메모리의 운영체제 영역에 존재하는 방식
-  * 별다른 부가 작업 없이 바로 주소 변환이 가능하기 때문에 직접 매핑이라고 부름
+### 1.3 페이지 부재
+- 유효 비트
+  - 가상 메모리의 페이지 테이블에는 페이지가 물리 메모리에 있는지, 스왑 영역에 있 는지 표시하기 위해 유효 비트를 사용
+    - 유효 비트가 0일 때: 페이지가 메모리에 있으므로 주소 필드에 물리메모리의 프레임 번호가 저장
+    - 유효 비트가 1일 때: 페이지가 스왑 영역에 있으므로 주소 필드에 스왑 영역 내 페이지의 주소가 저장
     
 <br>
 
-* 연관 매핑 associative mapping
-  * 페이지 테이블 전체를 스왑 영역에서 관리하는 방식
-  * 물리메모리의여유공간이작을때사용하는방식
-  * 모든 페이지 테이블을 저장장치의 스왑 영역에 저장하고 그중 일부만 물리 메모리에 가져옴
-  * 일부 내용만 무작위로 가져오기 때문에 페이지 번호와 프레임 번호 둘 다 표시
-  * 주소 변환 시 물리 메모리 내의 페이지 테이블을 다 검색해야 하며 만약 원하는 프레임 번호를 얻지 못하면 스왑 영역에 있는 페이지 테이블 검색
-  * 검색 실패 시 스왑 영역에서 다시 찾아야 하므로 시간을 낭비하게 됨
-
-<br>
-
-* 집합-연관 매핑set-associative mapping
-  * 연관 매핑에서는 물리 메모리에 있는 데이터가 무작위로 올라오기 때문에 원하는 프레임 번호를 얻기 위해 모든 테이블을 검색해야 하는 문제 존재
-  *  집합-연관 매핑은 디렉토리 매핑이라고도 부름
-  *  집합-연관 매핑에서는 페이지 테이블을 일정한 집합으로 자르고, 자른 덩어리 단위로 물리 메모리에 가져옴
-  *  페이지 테이블을 n개씩 자르고 이를 관리하는 페이지 테이블을 하나 더 생성
-  *  새로 생성한 집합 테이블에는 일정하게 자른 페이지 테이블이 물리 메모리에 있는지, 스왑 영역에 있는지에 대한 위치 정보를 표시
-  *  연관 매핑과 비교했을 때 집합 테이블을 통해 원하는 페이지 테이블 엔트리가 스왑 영역에 있는지, 물리 메모리에 있는지 간단히 파악할 수 있음
-  *  연관매핑과 집합 집합-연관 매핑은 캐쉬에서 사용하는 방식
-
-<br>
-
-* 역매핑invert mapping
-  * 물리 메모리의 프레임 번호를 기준으로 테이블을 구성
-  * 물리 메모리의 프레임에 어떤 프로세스의 어떤 페이지가 올라와 있는지 표시
-  * 프로세스 수와 상관없이 테이블이 하나만 존재하므로 테이블의 크기가 매우 작음
-  * 프로세스가 가상 메모리에 접근할 때 프로세스 아이디와 페이지 번호를 모두 찾아야 하는 단점이 있음
-
-<br>
-
-<b>직접 매핑 방식의 구조:</b>
-  * 페이지 테이블 전체가 물리 메모리에 저장되기 때문에 가상 주소 VA=<P, D>를 물리 주소 PA=<F, D>로 변환하려면 페이지 테이블의 P번째 위치(PTE P)에서 원하는 프레임 값을 얻을 수 있음
-  * 페이지 테이블의 시작 주소는 페이지 테이블 기준 레지스터가 가지고 있으므로 물리 메모리상 페이지 테이블의 P번째 주소가 시작 주소로부터 P번째 위치에 존재
-
-    <img width="687" alt="스크린샷 2023-11-01 오전 9 39 24" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/13b0db9e-7363-4dea-91dc-f178fb1ab1b2">
-<br>
-
-<b>연관 매핑 방식의 구조: </b>
-  * 메모리에 접근하기 위해 먼저 변환 색인 버퍼(Translation Look-ahead Buffer, TLB)를 찾음
-    * TLB히트:원하는페이지번호가변환색인버퍼에있는경우로,곧바로물리주소로변환
-    * TLB미스:원하는페이지번호가변환색인버퍼에없는경우로,스왑영역에저장된직접 매핑 테이블을 사용하여 프레임 번호로 변환
-  * 전체 페이지 테이블을 물리메모리에 보관하지 않아 메모리를 절약 할 수 있음
-  * TLB 미스가 빈번하게 발생할 경우 시스템의 성능이 떨어지는 단점 존재
-  * 변환 색인 버퍼는 페이지 테이블의 일부를 무작위로 가지고 있기 때문에 모든 변환 색인 버퍼를 검색한 후에야 원하는 페이지가 메모리에 없다는 것을 알 수 있음
-
-    <img width="778" alt="스크린샷 2023-11-01 오전 9 52 12" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/ca1364fa-7c69-4042-a137-b659948091b0">
-<br>
-
-<b>집합-연관 매핑: </b>
-  * 방식:
-    * 페이지 테이블을 같은 크기의 여러 묶음으로 나누고, 각 묶음의 시작 주소를 가진 디렉터리 테이블을 새로 만들어 관리
-    * 전체 페이지 테이블은 스왑 영역에 있으며, 일부 테이블은 묶음 단위로 메모리로 옮김
-    * 해당 묶음이 현재 메모리에 있는지, 스왑 영역에 있는지를 표시하는 디렉터리 테이블을 새로 만듦
-    * 디렉터리 테이블을 살펴보면 원하는 테이블 묶음이 어디에 있는지 알 수 있으므로 전체 테이블을 찾아보지 않아도 TLB 미스를 바로 알 수 있음
-  * 가상 주소:
-    * 페이지 테이블이 일정 크기의 묶음으로 나뉘기 때문에 가상 주소를 VA=<P, D>가 아니라 VA=<P1, P2, D>로 바꾸어 표시
-      * P1: 디렉터리 테이블에서의 위치 정보
-      * P2: 묶음 내에서의 위치 정보
-    * 페이지 테이블을 10개씩 한 묶음으로 나눌 경우 0~9번 테이블은 0번 디렉터리에, 10~19번 테 이블은 1번 디렉터리에 속함
-      * 가상 주소 32번지: <0,3,2>로 변환
-      * 가상 주소 127번지: <1,2,7>로 변환
-  * 구조:
-    * 디렉터리 페이지 테이블의 시작 주소는 페이지 테이블 기준 레지스터가 가지고 있음
-    * 프로세스가 특정 주소를 요구하면 VA=<P1, P2, D>로 변환되고, P1을 이용하여 디렉터리 테이 블에서 주소를 찾음
-    * 만약 I(invalid)라고 표시되어 있으면 TLB 미스가 발생한 것
-    * 원하는 테이블이 물리 메모리에 있으면 묶음 테이블의 시작 주소가 명시되어 있음
-
-      <img width="784" alt="스크린샷 2023-11-01 오전 9 56 22" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/d7c77fd9-a8d8-4791-97c9-3470d92d39db">
-
-<br>
-
-<b>역매핑: </b>
-  * 방식:
-    * 물리 메모리의 프레임 번호를 기준으로 테이블 작성     
-      <img width="685" alt="스크린샷 2023-11-01 오전 9 57 41" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/b7ae0f4d-2650-4444-b52a-3a0659426b41">
-  
-  * 구조:
-    * 테이블이 <프레임 번호, 프로세스 아이디, 페이지 번호>로 구성
-    * 페이지 테이블의 행수는 실제 프레임의 수와 같음
-    * 프로세스의 수와 상관없이 항상 일정 크기의 페이지 테이블을 유지하여 테이블의 크기가 매우 작음
-    * 주소 변환 시 메모리 관리자는 주소 변환을 해야 하는 프로세스의 아이디와 페이지 번호가 물리 메모리에 있는지 역매핑 테이블에서 검색
-    * 현재 테이블에 원하는 데이터가 없으면 스왑 영역에서 가져옴
-    * 페이지 테이블을 다 검사한 후에야 저장장치에 접근하기 때문에 검색 시간을 낭비하는 단점이 있음
-
-      <img width="460" alt="스크린샷 2023-11-01 오전 9 58 43" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/584df029-63ad-40bf-8ab7-0234b70cc4e0">
-
-## <br> 03. 세그먼테이션 기법
-### 3.1 세그먼테이션 기법의 구현
-<b>세그먼테이션 테이블 segmentation table?</b>
-  * 세그먼트의 크기를 나타내는 limit와 물리 메모리상의 시작 주소를 나타내는 address가 있음
-  * 각 세그먼트가 자신에게 주어진 메모리 영역을 넘어가면 안 되기 때문에 세그먼트 의 크기 정보에는 크기를 뜻하는 size 대신 제한을 뜻하는 limit를 사용
-  * 세그먼테이션 기법에서도 물리 메모리가 부족할 때 스왑 영역을 사용
-  * 크기가 100B인 프로세스 D(세그먼트 3)가 스왑 영역에 있고, 세그먼테이션 테이블 의 address에 I(invalid)라고 표시되어 있음
-
-    <img width="734" alt="스크린샷 2023-11-01 오전 10 11 08" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/fe887008-1243-40f9-95c1-9143c7bc9df7">
-
-<br>
-
-### 3.2 세그먼테이션 기법의 주소 변환
-<b>프로세스 A의 32번지에 접근할 때 주소 변환 과정: </b>
-  1. 가상 주소를 구함(VA =<0, 32>)
-  2. 세그먼테이션 테이블에서 세그먼트 0의 시작 주소를 알아낸 후 시작 주소 120에 거리 32를 더하여 물리 주소 152번지를 구함<br>(이때 메모리 관리자는 거리가 세그먼트의 크기보다 큰지 점검하고 만약 크다면 메모리 오류를 출력하고 해당 프로세스를 강제 종료하며, 크지 않다면 물리 주소를 구함)
-  3. 물리 주소 152번지에 접근하여 원하는 데이터를 읽거나 씀
-
-     <img width="632" alt="스크린샷 2023-11-01 오전 10 17 59" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/69dc04fa-5c9c-4341-85e7-c65595ad1396">
-
-## <br> 4. 세그먼테이션-페이징 혼용 기법
-### 4.1 접근 권한
-* 메모리 접근 권한
-  * 메모리의 특정 번지에 저장된 데이터를 사용할 수 있는 권한
-  * 읽기(read), 쓰기(write), 실행(execute), 추가(append) 권한이 있음
-
-    <img width="620" alt="스크린샷 2023-11-01 오전 10 42 23" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/3e65f412-c66d-4ed7-9f96-7ae8cfe412b6">
-
-<br>
-
-* 프로세스의 영역별 메모리 접근 권한
-  * 코드 영역 : 자기 자신을 수정하는 프로그램은 없기 때문에 읽기 및 실행 권한을 가짐
-  * 데이터 영역 : 데이터는 크게 읽거나 쓸 수 있는 데이터와 읽기만 가능한 데이터로 나 눌 수 있음 (일반적인 변수는 읽거나 쓸 수 있으므로 읽기 및 쓰기 권한을 가지고 상수 로 선언한 변수는 읽기 권한만 가짐)
-
-    <img width="607" alt="스크린샷 2023-11-01 오전 10 42 55" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/addfc843-dedd-497a-b3ed-24d66740e6ce">
-
-<br>
-
-### 4.2 세그먼테이션-페이징 혼용 기법의 도입
-* 페이징 기법에서 메모리 접근 권한까지 고려한 페이지 테이블 예
-  * 페이지마다 접근 권한이 다르기 때문에 페이지 테이블의 모든 행에는 메모리 접근 권한과 관련된 권한 비트(right bit) 추가
-  * 메모리 관리자는 주소 변환이 이루어질 때마다 페이지 테이블의 권한 비트를 이용하 여 유용한 접근인지 아닌지 확인
-  * 페이지 테이블에 권한 비트가 추가되면 페이지 테이블의 크기가 커지는 문제가 있음 (이 문제를 완화하려면 반복되는 권한 비트를 줄여야 함)
+- 페이지 부재 page fault
+  - 프로세스가 페이지를 요청했을 때 그 페이지가 메모리에 없는 상황
+  - 페이지 부재가 발생하면 프로세스가 해당 페이지를 사용할 수 있도록 스왑 영역에서 물리 메모리로 옮겨야 함
     
-    <img width="728" alt="스크린샷 2023-11-01 오전 10 45 27" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/f9c70732-fec7-4b80-ad04-e5d424bb7446">
-
 <br>
 
-* 세그먼테이션-페이징 혼용 기법
-  
-  <img width="828" alt="스크린샷 2023-11-01 오전 10 46 20" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/7c48bc0d-6946-4ec8-8f22-416920731d9b">
+- 페이지 부재 처리 과정
+  1. 프로세스가 페이지 3을 요청하면 페이지 테이블의 유효 비트가 1이기 때문에 페이지 부재 발생
+  2. 메모리 관리자는 스왑 영역의 0번에 있는 페이지를 메모리의 비어 있는 프레임인 5로 가져옴(스왑인)
+  3. 프레임 5로 접근하여 해당 데이터를 프로세스에 넘김
 
-<br>
-
-### 4.3 세그먼테이션-페이징 혼용 기법의 주소 변환
-* 세그먼테이션-페이징 혼용 기법에서 동적 주소 변환 과정
-  1. 사용자가 어떤 주소에 있는 데이터를 요청하면 해당 주소가 몇 번째 세그먼트의 몇 번째 페이지로부터 얼마나 떨어져 있는지 계산하여 가상 주소 VA =<S, P, D>를 구함
-  2. 세그먼테이션 테이블의 해당 세그먼트 번호로 가서 자신의 영역을 벗어나는 불법 접근이 아닌 지, 권한이 없는 페이지에 접근하는 것은 아닌지 등을 확인(만약 권한이 없는 페이지에 접근하거나 자신에게 주어진 메모리 영역을 벗어나면 세그먼테이션 오류(트랩)를 발생시켜 프로세스 를 강제 종료하고, 그렇지 않으면 연결된 페이지 테이블로 감)
-  3. 페이지 테이블에서 해당 페이지가 어느 프레임에 저장되었는지 찾음(만약 물리 메모리에 프레임이 있다면 메모리에 바로 접근하고, 없다면 스왑 영역에 가서 해당 페이지를 물리 메모리로 가져옴)
-  4. 물리 메모리에 있는 프레임의 처음 위치에서 D만큼 떨어진 곳에 접근하여 데이터를 읽거나 씀
+     <img width="758" alt="스크린샷 2023-11-15 오후 7 38 44" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/86b478ec-df15-4b41-8d2b-11239f6f6d85">
      
-     <img width="740" alt="스크린샷 2023-11-01 오전 10 47 53" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/ba722877-8679-4498-aad3-e2095bbfa709">
+<br>
 
-## <br> 5. 캐시 매핑 기법
-### 5.1 캐시 직접 매핑
-* 메모리의 블록이 캐시로 올라올 때 항상 같은 위치에 올라옴
-* 캐시는 메모리의 어떤 블록에서 올라온 페이지인지만 확인
-* CPU가 메모리에 접근하려는 주소 <P, D>는 <tag, bd, D>로 바꿀 수 있고, 원하는 데이터를 캐시에 얻기 위해 <tag, D>를 사용
-* 태그: 캐시에블록번호를명시하는것
-* bdblock distance: 블록에서의 거리를 의미
+- 페이지 교체
+  - 페이지 부재가 발생하면 스왑 영역에 있는 페이지를 메모리의 빈 영역에 올리고 페이지 테이블을 갱신(업데이트)
+  - 빈 프레임이 없을 때는 메모리에 있는 프레임 중 하나를 스왑 영역으로 내보낸 후에야 해당 페이지를 가져올 수 있음
 
 <br>
 
-* 캐시 직접 매핑의 예
-  * 현재 캐시의 00 위치에 lion, chicken, tuna, snake 중 어떤 데이터가 올라왔는지 확인하기 위해 캐시에서는 태그를 유지
-  * 태그는 메모리 주소의 앞 2bit에 해당하는 값으로, 어떤 블록에서 올라온 데이터인 지를 나타냄
-  * CPU가 메모리 워드 1101의 cobra를 필요로 하는 경우 CPU는 캐시의 01 위치(주소 의 뒷자리)에 가서 태그가 11인지 확인하는데 태그가 11이므로 캐시 히트
-  * 0111의 crow가 필요하다면 먼저 캐시의 11 위치로 가서 태그가 01인지 확인하는 데 캐시의 11 위치 태그가 현재 00이므로 캐시 미스가 발생하고, CPU는 메모리의 0111로 가서 crow를 가져옴
-
-    <img width="723" alt="스크린샷 2023-11-01 오전 10 49 08" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/aa786170-30b1-42b9-87fb-e560a56f5b50">
+- 페이지 교체 알고리즘
+  - 어떤 페이지를 스왑 영역으로 내보낼지 결정하는 알고리즘
 
 <br>
 
-### 5.2 캐시 연관 매핑
-* 메모리 워드가 캐시의 어느 위치에도 자유롭게 올라갈 수 있으므로 캐시가 메모리 워드의 주소를 전부 가지고 있음
-* CPU가 특정 주소를 필요로 할 때 캐시에서 검색하여 찾는 경우는 캐시 히트이지만, 찾지 못하면 캐시 미스가 발생하여 메모리에서 원하는 데이터를 가져옴
-* 장점 : 캐시 메모리를 자유롭게 사용할 수 있음
-* 단점 : 캐시 히트인지, 캐시 미스인지 확인하기 위해 캐시의 모든 주소를 검색해야 함
-
-  <img width="669" alt="스크린샷 2023-11-01 오전 10 50 54" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/781e5f99-e068-461e-9ba4-248876e08265">
+- 대상 페이지 victim page
+  - 페이지 교체 알고리즘에 의해 스왑 영역으로 보낼 페이지
 
 <br>
 
-### 5.3 캐시 집합-연관 매핑
-* 캐시를 K개의 집합으로 나누고 각 집합에 직접 매핑을 사용
-* 직접 매핑을 하는 캐시 메모리를 K개로 나눔으로써 같은 끝자리를 가진 캐시 메모 리도 K개가 되기 때문에 직접 매핑의 자리 다툼 문제가 완화됨
-* 집합 내에서 직접 매핑을 사용하기 때문에 바로 캐시 히트 여부를 알 수 있음
+- 메모리가 꽉 찬 상태에서 페이지 부재가 발생했을 때 조치
+  1. 해당 페이지의 유효 비트가 1이라 페이지 부재가 발생
+  2. 메모리가 꽉 차 있는 상태이기 때문에 스왑 영역에 있는 페이지 E를 가져오기 위해 메모리의 페이지 중 하나를 스왑 영역으로 내보내야 함(물리 메모리의 프레임 3에 저장된 페이지를 대상 페이지로 선정했는데 이 페이지를 스왑 영역으로 옮김(스왑 아웃))
+  3. 대상 페이지 PTE 1의 유효 비트가 0에서 1로, 주소 필드 값이 프레임 3에서 스왑주 소 6으로 바뀜
+  4. 스왑 영역 1번에 있던 페이지 E가 프레임 3으로 올라감(스왑인)
+  5. PTE 4의 유효 비트가 1에서 0으로, 주소 필드 값이 스왑 주소 1에서 프레임 3으로 바뀜
 
-* 캐시 집합-연관 매핑의 예
-  * 캐시를 2개의 집합(K=2)으로 나누고 하나의 집합에 2개의 페이지를 사용
-  * 주소 P의 4bit 중 마지막 1bit만 bd를 나타내고 태그는 앞의 3bit
-  * 주소의 끝이 0인 페이지는 2개의 집합 중 비어 있는 첫 번째 위치에 들어가고, 끝이 1인 페이지는 2개의 집합 중 비어 있는 마지막 위치에 들어감
+    <img width="924" alt="스크린샷 2023-11-15 오후 7 41 07" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/a55daf95-cfa9-49da-a33b-2e726ad2561b">
 
-    <img width="647" alt="스크린샷 2023-11-01 오전 10 52 02" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/45456a7b-9394-4da1-9fc0-4348a099cafe">
+<br>
+
+- 세그먼테이션 오류와 페이지 부재
+  - 세그먼테이션 오류(segmentation fault)
+    - 사용자의 프로세스가 주어진 메모리 공간을 벗어나거나 접근 권한이 없는 곳에 접근할 때 발생하며 해당 프로세스를 강제 종료하여 해결
+  - 페이지 부재(page fault)
+    - 해당 페이지가 물리 메모리에 없을 때 발생하는 오류로 사용자 프로세스와 무관하기 때문에 페이지 부재가 발생하면 메모리 관리자는 스왑 영역에서 해당 페이지를 물리 메모리로 옮긴 후 작업을 진행 
+     
+<br>
+
+### 1.4 지역성
+- 지역성 locality
+  - 기억장치에 접근하는 패턴이 메모리 전체에 고루 분포되는 것이 아니라 특정 영역에 집중되는 성질
+  - 페이지 교체 알고리즘이 쫓아낼 페이지를 찾을 때 지역성을 바탕으로 함
+
+<br>
+
+- 지역성의 종류
+  - 공간의 지역성: 현재 위치에서 가까운 데이터에 접근할 확률이 먼거리에 있는 데이터에 접근할 확률보다 높음
+  - 시간의 지역성: 현재를 기준으로 가장 가까운 시간에 접근한 데이터가 더 먼시간에 접근한 데이터보다 사용될 확률이 높음
+  - 순차적 지역성: 여러 작업이 순서대로 진행되는 경향이 있음
+    
+    <img width="789" alt="스크린샷 2023-11-15 오후 7 46 57" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/c0cef583-8475-4261-a017-7fc56e377e07">
+  
+## <br> 02. 페이지 교체 알고리즘
+### 2.1 페이지 교체 알고리즘의 개요
+- 페이지 교체 알고리즘
+  - 스왑 영역으로 보낼 페이지를 결정하는 알고리즘
+  - 메모리에서 앞으로 사용할 가능성이 적은 페이지를 대상 페이지로 선정하여 페이지 부재를 줄이고 시스템의 성능을 향상
+    <img width="993" alt="스크린샷 2023-11-15 오후 7 47 54" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/56ebeb6e-5b9c-4752-ad77-b06a27eeca68">
+    
+<br>
+
+- 페이지 교체 알고리즘의 성능 평가 기준
+  - 어떤 알고리즘이 다른 알고리즘보다 성능이 좋은지 평가하는 데에는 다양한 비교 방법이 있음
+  - 여기에서는 같은 메모리 접근 패턴을 사용하여 페이지 부재 횟수와 페이지 성공 횟 수를 비교
+
+<br>
+
+### 2.2 무작위 페이지 교체 알고리즘 random page replacement algorithm
+- 스왑 영역으로 쫓아낼 대상 페이지를 특별한 로직 없이 무작위로 선정
+- 지역성을 전혀 고려하지 않기 때문에 자주 사용하는 페이지가 대상 페이지로 선정되기도 하여 성능이 좋지 않음
+
+<br>
+
+### 2.3 FIFO 페이지 교체 알고리즘
+
+<img width="816" alt="스크린샷 2023-11-15 오후 7 50 49" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/eb8dec33-4e07-45df-bb0b-471f103b3673">
+
+- 시간상으로 메모리에 가장 먼저 들어온 페이지를 대상 페이지로 선정하여 스왑영역으로 쫓아냄
+- 메모리가 꽉 차면 맨 위의 페이지가 스왑 영역으로 가고 나머지 페이지들이 위쪽으로 이동하며, 새로운 페이지가 아래쪽의 남은 공간에 들어옴
+- 무조건 오래된 페이지를 대상 페이지로 선정하기 때문에 성능이 떨어짐
+- 페이지 성공 횟수: 3
+
+<br>
+
+### 2.4 최적 페이지 교체 알고리즘
+
+<img width="828" alt="스크린샷 2023-11-15 오후 7 51 17" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/fd188f0a-2463-4d3c-8bc4-26ebd22c21ef">
+
+- 앞으로 사용하지 않을 페이지를 스왑 영역으로 옮김
+- 메모리가 앞으로 사용할 페이지를 미리 살펴보고 페이지 교체 선정 시점부터 사용 시점까지 가장 멀리 있는 페이지를 대상 페이지로 선정
+- 페이지성공횟수:5
+- 이상적인 방법이지만 실제로 구현 불가능
+- 최적 근접 알고리즘의 접근방식
+  - 실제 구현이 가능하면서도 성능이 최적 근접 알고리즘에 근접한 알고리즘
+  - LRU 페이지 교체 알고리즘 : 페이지에 접근한 시간을 기준으로 대상 페이지를 선정
+  - LFU 페이지 교체 알고리즘 : 페이지가 사용된 횟수를 기준으로 대상 페이지를 선정 
+<br>
+
+### 2.5 LRU 페이지 교체 알고리즘
+- ‘최근 최소 사용 페이지 교체 알고리즘’이라고도 함
+- 메모리에 올라온 후 가장 오랫동안 사용되지 않은 페이지를 스왑 영역으로 옮김
+- 최근에 사용된 페이지는 놔두고 오래전에 사용된 페이지를 대상 페이지로 선정
+- 알고리즘은 시간을 기준으로 구현할 수 있으며 카운터나 참조 비트를 이용하는 방법도 있음
+- 페이지 접근 시간에 기반한 구현
+   <img width="872" alt="스크린샷 2023-11-15 오후 7 54 12" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/99935631-5951-4733-9296-2660cff8a765">
+   - 페이지에 접근한 지 가장 오래된 페이지를 교체
+   - 페이지 성공 횟수 : 4
+- 카운터에 기반한 구현
+  - LRU 페이지 교체 알고리즘을 카운터를 사용하여 구현
+- 참조 비트 시프트 방식
+  - 각 페이지에 일정 크기의 참조 비트를 만들어 사용하는 것
+  - 참조 비트의 초깃값은 0이며 페이지에 접근할 때마다 1로 바뀜
+  - 참조 비트는 주기적으로 오른쪽으로 한 칸씩 이동
+  - 참조 비트를 갱신하다가 대상 페이지를 선정할 필요가 있으면 참조 비트 중 가장 작은 값을 대상 페이지로 선정 
+
+  <img width="871" alt="스크린샷 2023-11-15 오후 7 55 49" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/2b02966e-143a-4c9e-91c7-774ec8960107">
+
+- 참조 비트 시프트 방식이 LFU가 아니라 LRU 페이지 교체 알고리즘인 이유
+  - A페이지는 4번 접근, B페이지는 한번 접근, C페이지는 다섯번 접근했으나, C페이지 가 접근한 시각이 가장 오래됨
+  - C 페이지 참조비트가 가장 작은 값이기 때문에 참조비트 방식에서 쫒겨 남
+  - 따라서 참조비트방식은 시각을 기준으로 하기 때문에 LRU 방식임
+
+<br>
+
+### 2.6 LFU 페이지 교체 알고리즘
+
+<img width="877" alt="스크린샷 2023-11-15 오후 7 57 01" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/c750a72b-42ee-4a31-a402-64a2d3e345d3">
+
+- 페이지가 몇 번 사용 되었는지를 기준으로 대상 페이지를 선정
+- 현재 프레임에 있는 페이지마다 그 동안 사용된 횟수를 세어 횟수가 가장 적은 페이지를 스왑 영역으로 옮김
+
+<br>
+
+### 2.7 NUR 페이지 교체 알고리즘
+- LRU, LFU 페이지 교체 알고리즘은 성능은 좋으나 추가적인 오버헤드가 큼
+- 이를 개선한 NRU는 두 개의 비트만으로 구현 가능
+- ‘최근 미사용 페이지 교체 알고리즘’이라고도 불림
+- 페이지마다 참조 비트와 변경 비트를 가짐
+  - 참조 비트 : 페이지에 접근(read/execute)하면 1
+  - 변경 비트 : 페이지가 변경(write/append)되면 1
+- 모든 페이지의 초기 상태는 (0,0), 모든 값이 (1,1)이면 초기화
+
+<img width="853" alt="스크린샷 2023-11-15 오후 7 58 43" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/3c314822-600b-4cf7-8697-cbbbdb40665a">
+
+- 대상 페이지를 찾을 때 참조 비트가 0인 페이지를 먼저 찾고, 없으면 변경 비트가 0 인 페이지를 찾음
+- 같은 비트의 페이지가 여러 개라면 무작위로 대상 페이지를 선정
+- 페이지 성공 횟수 : 5
+
+<br>
+
+### 2.8 FIFO 변형 알고리즘
+- 2차 기회 페이지 교체 알고리즘
+
+  <img width="792" alt="스크린샷 2023-11-15 오후 7 59 46" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/c0244495-5a66-4684-b5df-96484f773d33">
+
+  - FIFO 페이지 교체 알고리즘과 마찬가지로 큐를 사용
+  - 특정 페이지에 접근하여 페이지 부재 없이 성공할 경우 해당 페이지를 큐의 맨 뒤로 이동하여 대상 페이지에서 제외
+  - 성공한 페이지를 큐의 맨 뒤로 옮김으로써 기회를 한 번 더 줌
+  - 페이지 성공 횟수 : 4
+
+<br>
+
+- 시계 알고리즘
+  
+  <img width="779" alt="스크린샷 2023-11-15 오후 8 00 58" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/31e90dc5-40ce-47c1-90c9-c645abfcf4f5">
+
+  - 2차 기회 페이지 교체 알고리즘은 큐를 사용하지만 시계 알고리즘은 원형 큐를 사용
+  - 스왑 영역으로 옮길 대상 페이지를 가리키는 포인터를 사용
+  - 포인터가 큐의 맨 바닥으로 내려가면 다음번에는 다시 큐의 처음을 가리키게 됨
+
+  <img width="894" alt="스크린샷 2023-11-15 오후 8 01 25" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/74035d07-7de4-45f2-b290-ad728b7e38e5">
+
+  - 2차 기회 페이지 교체 알고리즘에 비해 각 페이지에 참조 비트가 하나씩 추가
+  - 참조 비트의 초깃값은 0, 메모리에 있는 페이지를 성공적으로 참조하면 0에서 1로 변경
+  - 대상 포인터는 메모리가 꽉 찰 경우 스왑 영역으로 쫓겨날 페이지를 가리킴
+  - 가리키는 페이지가 스왑 영역으로 쫓겨 나면 대상 포인터를 밑으로 이동하는데 이때 참조 비트가 1인 페이지는 0으로 만든 후 건너 뜀(2차기회를 줌)
+  - 페이지 성공 횟수: 4
+
+## <br> 03. 스레싱과 프레임 할당
+### 3.1 스레싱 threshing
+> 하드디스크의 입출력이 너무 많아져서 잦은 페이지 부재로 작업이 멈춘 것 같은 상태
+<br>
+
+- 스레싱 발생 시점
+  - CPU가 작업하는 시간보다 스왑 영역으로 페이지를 보내고 새로운 페이지를 메모리에 가져오는 작업이 빈번해져서 CPU가 작업할 수 없는 상태에 이르게 되는 시점
+  - 물리 메모리의 크기를 늘리면 스레싱 발생 지점이 늦춰져서 프로세스를 원만하게 실행할 수 있음
+
+<br>
+
+- 스레싱과 프레임 할당
+  - 프로세스에 너무 적은 프레임을 할당하면 페이지 부재가 빈번히 일어남
+  - 프로세스에 너무 많은 프레임을 할당하면 페이지 부재는 줄지만 메모리가 낭비
+  - 프로세스에 프레임을 할당하는 방식은 크게 정적 할당과 동적 할당으로 구분
+
+<br>
+
+### 3.2 정적 할당
+- 균등 할당 equal allocation
+  - 프로세스의 크기와 상관없이 사용 가능한 프레임을 모든 프로세스에 동일하게 할당
+  - 크기가 큰 프로세스의 경우 필요한 만큼 프레임을 할당받지 못하기 때문에 페이지 부재가 빈번하게 발생하고, 크기가 작은 프로세스의 경우 메모리가 낭비
+
+<br>
+
+- 비례 할당proportional allocation
+  -프로세스의 크기에 비례하여 프레임을 할당
+  - 프로세스의 크기를 고려하지 않는 고정 할당보다 좀 더 현실적인 방식
+    - 프로세스가 실행 중에 필요로 하는 프레임을 유동적으로 반영하지 못함
+    - 사용하지 않을 메모리를 처음부터 미리 확보하여 공간을 낭비
+
+<br>
+
+### 3.3 동적 할당
+- 작업집합 모델 working set model
+  - 최근 일정 시간 동안 참조된 페이지들을 집합으로 만들고, 이 집합에 있는 페이지들을 물리 메모리에 유지
+    - 작업 집합 크기: 작업 집합 모델에서 물리 메모리에 유지할 페이지 크기
+    - 작업집합 윈도우 : 작업집합에 포함되는 페이지 범위
+  - 델타 동안 참조된 10개의 페이지 중 작업집합에는 WS(t1)={1, 7, 5, 2, 3}이 삽입되 며, 이 페이지들은 다음번 윈도우에 도달할 때까지 물리 메모리에 보존 
+
+<br>
+
+- 작업집합의 갱신
+  - 작업집합 크기가 5라는 것은 페이지에 다섯 번 접근할 때마다 작업 집합을 갱신한다는 의미
+
+<br>
+
+- 작업집합 윈도우의 크기와 프로세스 실행 성능
+  - 작업집합 윈도우를 너무 크게 잡으면 필요 없는 페이지가 메모리에 남아서 다른 프로세스에 영향을 미침
+  - 윈도우를 너무 작게 잡으면 필요한 페이지가 스왑 영역으로 옮겨져서 프로세스의 성능이 떨어짐
+  - 적정크기의 작업집합을 유지함으로써 메모리를 효율적으로 관리 할 수 있음
+
+<br>
+
+- 페이지 부재 빈도 page fault frequency
+  - 페이지 부재 횟수를 기록하여 페이지 부재 비율을 계산하는 방식
+  - 페이지 부재 비율이 상한선을 초과하면 프레임을 추가하여 늘림
+  - 페이지 부재 비율이 하한선 밑으로 내려가면 할당한 프레임을 회수
+  - 페이지 부재 빈도 방식은 프로세스를 실행하면서 추가적으로 페이지를 할당하거나 회수하여 적정 페이지 할당량을 조절
+    
+    <img width="785" alt="스크린샷 2023-11-15 오후 8 07 45" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/ec1fa467-63d8-4c49-8b7e-74fbe3d27e1e">
+
+## <br> 4. [심화학습] 프레임 관련 이슈
+### 4.1 전역 교체와 지역 교체
+
+<img width="761" alt="스크린샷 2023-11-15 오후 8 08 28" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/c0f953bf-c873-4657-9a32-f111ddfe9852">
+
+- 전역 교체 : 전체 프레임을 대상으로 교체 알고리즘을 적용
+- 지역 교체 : 현재 실행 중인 프로세스의 프레임을 대상으로 교체 알고리즘을 적용
+- 지역 교체 방식의 장단점
+  - 장점 : 자신에게 할당된 프레임의 전체 개수에 변화가 없기 때문에 페이지 교체가 다른 프로세스에 영향을 미치지 않음
+  - 단점 : 자주 사용하는 페이지가 스왑 영역으로 옮겨져 시스템의 효율이 떨어짐
+
+<br>
+
+### 4.2 페이지 테이블 크기
+- 윈도우 NT의 페이지 테이블 크기
+  - 페이지 테이블이 차지하는 공간은 1,048,576개×20bit=약 2.62MB
+
+<br>
+
+- VAX 운영체제의 테이블 크기
+  - VAX의 페이지 테이블 크기는 8,388,608개×23bit=약 24.11MB
+
+<br>
+
+### 4.3 쓰기 시점 복사
+- 프로세스의 프레임 공유 예
+  <img width="1064" alt="스크린샷 2023-11-15 오후 8 10 25" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/39411e4c-f0ff-4c1c-a064-87d71bcc6d12">
+
+<br>
+
+- fork( ) 시스템 호출로 프로세스를 복사하면 프레임 공유도 유지
+  <img width="759" alt="스크린샷 2023-11-15 오후 8 10 49" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/cef8bf51-7882-4dce-8da8-634450839bf3">
+
+<br>
+
+- 프레임을 공유할 수 없는 경우 메모리 공간 확보 시기
+  - 사용할지 안 할지 모르는 데이터를 위해 새로운 공간을 미리 만드는 것은 낭비
+    - → 쓰기 시점 복사 copy on write
+    - 데이터의변화가있을때까지복사를미루는방식
+      <img width="757" alt="스크린샷 2023-11-15 오후 8 11 41" src="https://github.com/YangYubin12/OperatingSystem/assets/102217712/6a7247ac-fa18-4be3-bf5b-6341089ad3d9">
 
 <br>
 
 ## 출처
-* [출처 1: [8.가상 메모리와 요구 페이징]([https://jesus-never-fail.tistory.com/30](https://goodmilktea.tistory.com/36))
-* [출처 2: 페이징 기법](https://mgyo.tistory.com/462)
-* Chapter 08 가상 메모리의 기초 PPT
+* [출처: 8.가상 메모리와 요구 페이징](https://goodmilktea.tistory.com/36)
+* Chapter 09 가상 메모리의 관리 PPT
