--- a/메모리관리/가상메모리관리.md
+++ b/메모리관리/가상메모리관리.md
@@ -1,10 +1,10 @@
 ## 운영체제: 메모리 관리
 > ✅ 가상 메모리 관리 <br>
 
-> [01. 요구 페이징](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-01-%EA%B0%80%EC%83%81-%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98-%EA%B0%9C%EC%9A%94) <br>
-> [02. 페이지 교체 알고리즘](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-02-%ED%8E%98%EC%9D%B4%EC%A7%95-%EA%B8%B0%EB%B2%95) <br>
-> [03. 스레싱과 프레임 할당](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-03-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%EA%B8%B0%EB%B2%95) <br>
-> [04. 프레임 관련 이슈](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%9D%98%EA%B8%B0%EC%B4%88.md#-4-%EC%84%B8%EA%B7%B8%EB%A8%BC%ED%85%8C%EC%9D%B4%EC%85%98-%ED%8E%98%EC%9D%B4%EC%A7%95-%ED%98%BC%EC%9A%A9-%EA%B8%B0%EB%B2%95) <br>
+> [01. 요구 페이징](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-01-%EC%9A%94%EA%B5%AC-%ED%8E%98%EC%9D%B4%EC%A7%95) <br>
+> [02. 페이지 교체 알고리즘](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-02-%ED%8E%98%EC%9D%B4%EC%A7%80-%EA%B5%90%EC%B2%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98) <br>
+> [03. 스레싱과 프레임 할당](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-03-%EC%8A%A4%EB%A0%88%EC%8B%B1%EA%B3%BC-%ED%94%84%EB%A0%88%EC%9E%84-%ED%95%A0%EB%8B%B9) <br>
+> [04. 프레임 관련 이슈](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-4-%EC%8B%AC%ED%99%94%ED%95%99%EC%8A%B5-%ED%94%84%EB%A0%88%EC%9E%84-%EA%B4%80%EB%A0%A8-%EC%9D%B4%EC%8A%88) <br>
 
 ## <br> 01. 요구 페이징
 ### 1.1 요구 페이징의 개요
