--- a/저장장치관리/입출력시스템과저장장치_디스크스케줄링.md
+++ b/저장장치관리/입출력시스템과저장장치_디스크스케줄링.md
@@ -1,8 +1,8 @@
 ## 운영체제: 저장장치 관리
 > ✅ 입출력 시스템과 저장장치_디스크 스케줄링 <br>
 
-> [01. 디스크 장치의 종류](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-01-%EC%9A%94%EA%B5%AC-%ED%8E%98%EC%9D%B4%EC%A7%95) <br>
-> [02. 디스크 스케줄링](https://github.com/YangYubin12/OperatingSystem/blob/master/%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC/%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B4%80%EB%A6%AC.md#-02-%ED%8E%98%EC%9D%B4%EC%A7%80-%EA%B5%90%EC%B2%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98) <br>
+> [01. 디스크 장치의 종류](https://github.com/YangYubin12/OperatingSystem/blob/master/%EC%A0%80%EC%9E%A5%EC%9E%A5%EC%B9%98%EA%B4%80%EB%A6%AC/%EC%9E%85%EC%B6%9C%EB%A0%A5%EC%8B%9C%EC%8A%A4%ED%85%9C%EA%B3%BC%EC%A0%80%EC%9E%A5%EC%9E%A5%EC%B9%98_%EB%94%94%EC%8A%A4%ED%81%AC%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81.md#-01-%EB%94%94%EC%8A%A4%ED%81%AC-%EC%9E%A5%EC%B9%98%EC%9D%98-%EC%A2%85%EB%A5%98) <br>
+> [02. 디스크 스케줄링](https://github.com/YangYubin12/OperatingSystem/blob/master/%EC%A0%80%EC%9E%A5%EC%9E%A5%EC%B9%98%EA%B4%80%EB%A6%AC/%EC%9E%85%EC%B6%9C%EB%A0%A5%EC%8B%9C%EC%8A%A4%ED%85%9C%EA%B3%BC%EC%A0%80%EC%9E%A5%EC%9E%A5%EC%B9%98_%EB%94%94%EC%8A%A4%ED%81%AC%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81.md#-02-%EB%94%94%EC%8A%A4%ED%81%AC-%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81) <br>
 
 ## <br> 01. 디스크 장치의 종류
 ### 1.1 하드 디스크의 구조
